<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Docket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="title_activity_task_manager">TaskManager</string>
    <string name="title_activity_write_task">New Task</string>
    <string name="title_activity_write_event">New Event</string>
    <string name="save_write_task">Save Task</string>
    <string name="search_string">Search </string>
    <string name="add_string">Add</string>
    <string name="add_event_string">Add Event</string>
    <string name="add_task_string">Add Note</string>
    <string name="add_habit_string">Add Habit</string>
    <string name="add_todo_string">Add To Do Item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_text_hint"> Add Task Text </string>
    <string name="title_activity_view_task">Task</string>
    <string name="task_text_label">Task Text </string>
    <string name="update_task_button">Update Task</string>
    <string name="set_date_task">Set Date</string>
    <string name="title_activity_home">Home</string>

    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Events</item>
        <item>Routines</item>
        <item>To Do List</item>
        <item>Notes</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_time</item>
        <item>@drawable/ic_action_keyboard</item>
        <item>@drawable/ic_action_play</item>
        <item>@drawable/ic_action_settings</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_tasks_text">Tasks</string>
    <string name="nav_routines_text">Routines</string>
    <string name="nav_goals_text">Goals</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_write__note_">Write_Note_Activity</string>
    <string name="save_write_note">Save Note</string>
    <string name="write_note_title"></string>
    <string name="write_note_text_hint">Note Text</string>
    <string name="write_note_title_hint">Note Title</string>
    <string name="write_habit_text_hint">Habit Title</string>
    <string name="write_note_label">Note</string>
    <string name="title_activity_view_calendar">ViewCalendar</string>
    <string name="save_write_event">Save Event</string>
    <string name="cancel_write_event">Cancel Event</string>
    <string name="event_title_hint">Add an event</string>
    <string name="add_reminder_event">Add Reminder</string>
    <string name="add_guest_event">Add Guest</string>
    <string name="desc">Profile Pic</string>
    <string name="update_write_note">Update Note</string>
    <string name="update_note_label">Update Note</string>
    <string name="title_view_notes">Notes</string>
    <string name="title_list_notes">Notes</string>
    <string name="title_view_note">Note</string>
    <string name="title_activity_write_todo">Write Todo</string>
    <string name="title_view_todo">To Do</string>
    <string name="greet_me">Greet Me</string>
    <string name="account">Account</string>

    <string-array name="main_activity_items">
        <item>Foreground</item>
        <item>Background</item>
        <item>Background with Sync</item>
    </string-array>

    <string name="title_activity_landing_actvitiy">LandingActvitiy</string>
    <string name="LandingActivity">Semantic Organizer</string>
    <string name="title_activity_add_tag">Add Tag</string>
    <string name="title_activity_landing_activity_new">Home</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Done</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title_activity_add_checklist">Add Checklist</string>
    <string name="title_activity_add_habit">Add Habit</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_list_tags">ListTagsActivity</string>
    <string name="title_activity_list_notes">ListNotesActivity</string>
    <string name="title_activity_list_events">ListEventsActivity</string>
    <string name="title_activity_list_checklists">ListChecklistsActivity</string>
    <string name="title_activity_list_habits">ListHabitsActivity</string>
    <string name="title_update_note">Update Note</string>
    <string name="title_activity_update_habit">UpdateHabitActivity</string>
    <string name="write_habit_label">Habit</string>
    <string name="title_activity_update_check_list">UpdateCheckListActivity</string>
    <string name="write_checklist_text_hint">Add CheckList</string>
    <string name="write_checklist_label">Check List</string>
    <string name="title_activity_update_tag">UpdateTagActivity</string>
    <string name="title_activity_view_note">View One Time Task</string>
    <string name="title_activity_view_habit">View Repeating Task</string>
    <string name="title_activity_habit_streak">Habit Streak</string>
    <string name="title_activity_tag_list_view">Your Lists</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="title_activity_super_main">SuperMain</string>
    <string name="title_activity_archives">ArchivesActivity</string>
    <string name="title_activity_goals">Task Lists</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!--Preference stuff-->

    <string name="preferences_from_xml">Preference/1. Preferences from XML</string>
    <string name="launching_preferences">Preference/2. Launching preferences</string>
    <string name="preference_dependencies">Preference/3. Preference dependencies</string>
    <string name="default_values">Preference/4. Default values</string>
    <string name="preferences_from_code">Preference/5. Preferences from code</string>
    <string name="advanced_preferences">Preference/6. Advanced preferences</string>
    <string name="fragment_preferences">Preference/7. Fragment</string>
    <string name="preference_with_headers">Preference/8. Headers</string>
    <string name="switch_preference">Preference/9. Switch</string>

    <string name="launch_preference_activity">Launch PreferenceActivity</string>
    <string name="counter_value_is">The counter value is</string>

    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>

    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>

    <string name="title_switch_preference">Switch preference</string>
    <string name="summary_switch_preference">This is a switch</string>
    <string name="summary_switch_preference_yes_no">This is a switch with custom text</string>

    <string name="title_yesno_preference">Yes or no preference</string>
    <string name="summary_yesno_preference">An example that uses a yes/no dialog</string>
    <string name="dialog_title_yesno_preference">Do you like bananas?</string>

    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>

    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>

    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>

    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>

    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>

    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>

    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>

    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>

    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>

    <string name="example_preference_dependency">Example preference dependency</string>
    <string name="title_wifi">WiFi</string>
    <string name="title_wifi_settings">WiFi settings</string>

    <string name="default_value_list_preference">beta</string>
    <string name="default_value_edittext_preference">Default value</string>


</resources>
